GITForce/src/objects/Smartsheet_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>API_Base_URL__c</fullName>
        <defaultValue>&quot;https://api.smartsheet.com&quot;</defaultValue>
        <label>API Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Version__c</fullName>
        <defaultValue>&quot;1.1&quot;</defaultValue>
        <label>API Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorize_URL__c</fullName>
        <defaultValue>&quot;https://www.smartsheet.com/b/authorize&quot;</defaultValue>
        <label>Authorize URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_URL__c</fullName>
        <defaultValue>&quot;https://login.salesforce.com/apex/SmartsheetDemoPage&quot;</defaultValue>
        <label>Redirect URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <defaultValue>&quot;READ_SHEETS,WRITE_SHEETS,CREATE_SHEETS&quot;</defaultValue>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Smartsheet Config</label>
</CustomObject>